# swxsoc

./: .gitignore  .readthedocs.yml  AGENTS.md  BUG_60_NOTES.md  CHANGELOG.rst  MANIFEST.in  README.md  README.rst  pyproject.toml
.devcontainer/: devcontainer.json
.github/: downstream-packages.json
.github/workflows/: codestyle.yml  docs.yml  downstream-testing.yml  release.yml  test-release.yml  testing.yml
docs/: api.rst  conf.py  conftest.py  index.rst
docs/cmad/: index.rst
docs/dev-guide/: code_standards.rst  config.rst  dev_env.rst  docs.rst  downstream_testing.rst  index.rst  maintainer_workflow.rst  tests.rst
docs/examples/: tutorial1.rst
docs/user-guide/: cdf_format_guide.rst  customization.rst  fillval_and_masks.rst  grafana_annotation_management.rst  index.rst  logger.rst  reading_writing_data.rst  recording_to_timestream.rst  retrieving_data.rst  schema_information_guide.rst
scripts/: cdf_dump.py
swxsoc/: CITATION.rst  __init__.py  conftest.py  swxdata.py
swxsoc/comm/: __init__.py  slack.py
swxsoc/comm/tests/: test_slack.py
swxsoc/data/: config.yml  configrc  swxsoc_default_global_cdf_attrs_schema.yaml  swxsoc_default_global_fits_attrs_schema.yaml  swxsoc_default_variable_cdf_attrs_schema.yaml  swxsoc_default_variable_fits_attrs_schema.yaml
swxsoc/data/sample/: test_file_manifest.txt
swxsoc/db/: timeseries.py
swxsoc/db/tests/: test_timeseries.py
swxsoc/io/: __init__.py  base_handler.py  cdf_handler.py  fillval.py  io.py  s3.py
swxsoc/io/tests/: test_fillval.py  test_io.py  test_s3.py
swxsoc/net/: attr.py  client.py
swxsoc/net/tests/: test_client.py
swxsoc/scripts/: cdf_dump.py
swxsoc/tests/: config.yml  conftest.py  test_swxdata.py  test_timedata.py
swxsoc/util/: __init__.py  config.py  const.py  data_access.py  exceptions.py  grafana.py  io.py  logger.py  reprocessing.py  schema.py  util.py  validation.py
swxsoc/util/tests/: conftest.py  test_annotations.py  test_config.py  test_data_access.py  test_grafana.py  test_io.py  test_logger.py  test_reprocessing.py  test_schema.py  test_timestream.py  test_util.py  test_validation.py
