[build-system]
requires = ["setuptools>=45",
            "setuptools_scm[toml]>=6.2",
            "wheel"]
build-backend = 'setuptools.build_meta'

[project]
name = "swxsoc"
description = "A Python package to support the SWxSOC instrument packages."
readme = "README.rst"
dynamic = ["version"]
authors = [{name = "Steven Christe", email="steven.d.christe@nasa.gov"},
           {name = "Damian Barrous Dumme", email="damianbarrous@gmail.com"},
           {name = "Andrew Robbertz", email="a.robbertz@gmail.com"}]
license = {file = "LICENSE.rst"}
requires-python = ">=3.9"
keywords = ["swxsoc", "nasa mission", "space weather"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  'sammi-cdf>=0.1.2',
  'astropy>=5.3.3',
  'numpy>=1.18.0',
  'sunpy[all]>=5.0.1',
  'spacepy>=0.5.0',
  'ndcube>=2.2.0',
  'parfive>=2.1.0',
  'pyyaml>=5.3.1',
  'boto3>=1.35.26'
]

[project.urls]
Homepage = "https://github.com/swxsoc/swxsoc"
Documentation = "https://swxsoc.readthedocs.io/en/latest/"

[project.optional-dependencies]
dev = [
  'coverage>=5.0.3',
  'pytest==8.0.0',
  'pytest-astropy==0.11.0',
  'pytest-cov==4.1.0',
  'coverage[toml]==7.4.1',
  'moto[all]==5.0.15',
  'ruff',
]

docs = [
  'sphinx==7.2.6',
  'sphinx-automodapi==0.16.0',
  'sphinx-copybutton==0.5.2'
]

test = [
  'pytest==8.0.0',
  'pytest-astropy==0.11.0',
  'pytest-cov==4.1.0',
  'coverage[toml]==7.4.1',
  'moto[all]==5.0.15'
]

style = [
  'ruff',
  'rstcheck==6.2.0',
]

[tool.setuptools.package-data]
swxsoc = ["data/*"]

[tool.setuptools]
packages = ["swxsoc"]

[tool.setuptools_scm]
write_to = "swxsoc/_version.py"

[tool.pytest.ini_options]
testpaths = [
   "swxsoc/tests",
   "swxsoc/util/tests",
   "docs"
]
doctest_plus = "enabled"
text_file_format = "rst"
addopts = "--doctest-rst"

[tool.coverage.run]
omit = [
  'swxsoc/__init*',
  'swxsoc/conftest.py',
  'swxsoc/*setup_package*',
  'swxsoc/tests/*',
  'swxsoc/*/tests/*',
  'swxsoc/extern/*',
  'swxsoc/version*',
  '*/swxsoc/__init*',
  '*/swxsoc/conftest.py',
  '*/swxsoc/*setup_package*',
  '*/swxsoc/tests/*',
  '*/swxsoc/*/tests/*',
  '*/swxsoc/extern/*',
  '*/swxsoc/version*',
]

[tool.rstcheck]
report_level = "WARNING"
ignore_roles = [
  "py:class",
  "py:class",
  "file",
]
ignore_directives = [
    "plot",
    "doctest",
    "automodapi",
    "csv-table",
]
ignore_messages = "not referenced"


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
  "conftest.py",
  "conf.py"
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.10
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = ["F403"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
